--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
 	"author": "Fatai Olatunji",
 	"description": "A boilerplate for staring my nodejs journey",
 	"keywords": [ "descriptive", "related", "words","freecodecamp" ],
+	"license": "MIT",
 	"dependencies": {
 		"express": "^4.14.0"
 	},
